Add conclusion (draft)

--- a/doc/sections/sec05.tex
+++ b/doc/sections/sec05.tex
@@ -1,8 +1,11 @@
 \section{Conclusion}
 \label{sec:five}
 
-Second degree polynomial regression kicks butt, ensemble methods are awesome and
-everything comes at a cost.
+Given two tasks with Yelp data set, we successfully apply machine learning to solve them. We work through the standard machine learning pipeline, going from feature selection, determining hyper-parameters for model, choosing model, and apply final model on the test data.
+
+For regression task, we have overcome the baseline using polynomial regression with degree two by a significant margin. We also surpass the baseline in classification task with random forest. However, the performance is just a little bit better than baseline.
+
+We also develop a configurable and extendable framework which can be used for developing and reporting on future learning machine project.
 
 %%% Local Variables:
 %%% mode: latex
