Add Random Forest citation

--- a/doc/sections/sec02.tex
+++ b/doc/sections/sec02.tex
@@ -117,7 +117,7 @@ in detail in secion~\ref{sec:three}.
 
 \subsubsection{Random Forest}
 
-Random forest is an ensemble learning method, which can be used for
+Random forest\cite{breiman:2001} is an ensemble learning method, which can be used for
 classification or regression tasks.  Model fitting is done by training many
 decision trees using random samples from the training data.  This technique is
 also known as bootstrap aggregating or bagging.  After training, the model
