--- a/doc/bibliography/literature.bib
+++ b/doc/bibliography/literature.bib
@@ -1,26 +1,4 @@
-@article{sklearn:2011,
-  title={Scikit-learn: Machine Learning in {P}ython},
-  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
-          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
-          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
-          Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
-  journal={Journal of Machine Learning Research},
-  volume={12},
-  pages={2825--2830},
-  year={2011}
-}
-
-@book{bishop:2006,
-  author    = {Bishop, Christopher M.},
-  title     = {Pattern Recognition and Machine Learning (Information Science and
-                  Statistics)},
-  year      = {2006},
-  isbn      = {0387310738},
-  publisher = {Springer-Verlag New York, Inc.},
-  address   = {Secaucus, NJ, USA}
-}
-
-@article{DBLP:journals/ml/Breiman01,
+@article{breiman:2001,
   author    = {Leo Breiman},
   title     = {Random Forests},
   journal   = {Machine Learning},
@@ -35,3 +13,40 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{cover:1967,
+  author    = {Thomas M. Cover and Peter E. Hart},
+  title     = {Nearest neighbor pattern classification},
+  journal   = {{IEEE} Trans. Information Theory},
+  volume    = {13},
+  number    = {1},
+  pages     = {21--27},
+  year      = {1967},
+  url       = {http://dx.doi.org/10.1109/TIT.1967.1053964},
+  doi       = {10.1109/TIT.1967.1053964},
+  timestamp = {Wed, 09 Mar 2016 15:07:30 +0100},
+  biburl    = {http://dblp.dagstuhl.de/rec/bib/journals/tit/CoverH67},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{sklearn:2011,
+  title   = {Scikit-learn: Machine Learning in {P}ython},
+  author  = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+                  and Thirion, B. and Grisel, O. and Blondel, M. and
+                  Prettenhofer, P.  and Weiss, R. and Dubourg, V. and
+                  Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher,
+                  M. and Perrot, M. and Duchesnay, E.},
+  journal = {Journal of Machine Learning Research},
+  volume  = {12},
+  pages   = {2825--2830},
+  year    = {2011}
+}
+
+@book{bishop:2006,
+  author    = {Bishop, Christopher M.},
+  title     = {Pattern Recognition and Machine Learning (Information Science and
+                  Statistics)},
+  year      = {2006},
+  isbn      = {0387310738},
+  publisher = {Springer-Verlag New York, Inc.},
+  address   = {Secaucus, NJ, USA}
+}
