--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -9,7 +9,7 @@ addition, we briefly highlight the measures used to derive the test scores.
 
 The framework is built using Python 3.5.2 and the standard PyData libraries
 NumPy\furl{http://www.numpy.org/}, pandas\furl{http://pandas.pydata.org/} and
-scikit-learn\furl{http://scikit-learn.org} (by \citet{sklearn:2011}).  The data
+scikit-learn\furl{http://scikit-learn.org}~\cite{sklearn:2011}.  The data
 visualization routines utilize matplotlib\furl{http://matplotlib.org/} and
 seaborn\furl{http://seaborn.pydata.org/}.
 
