--- a/doc/components/appendix.tex
+++ b/doc/components/appendix.tex
@@ -12,7 +12,8 @@
     l@{\kern-25pt}r
     l@{\kern25pt} r@{\kern3pt}}
   \caption{A complete list of features selection scores for the regression
-    (linear regression test) and the classification ($\chi^2$ test) tasks.} \\
+    (linear regression test) and the classification ($\chi^2$ test) tasks.}
+  \label{tab:features-list} \\
   \toprule
   \bfseries Word
   & \multicolumn{1}{r}{\bfseries Regression Test}
@@ -86,7 +87,6 @@
  ``far''          & 0.0041    & ``come''         & 0.0050 \\
  ``experience''   & 0.0023    & ``taste''        & 0.0017 \\
  ``wait''         & 0.0002    & ``better''       & 0.0002 \\
-\label{tab:features-list}
 \end{longtable}
 
 %%% Local Variables:
