--- a/doc/sections/sec02.tex
+++ b/doc/sections/sec02.tex
@@ -44,8 +44,8 @@ applying the solution of the ordinary least squares (OLS) problem.
 
 Linear regression models the relationship between the features and the outcome
 using a linear function; in this case a linear relationship between vectors of
-word counts (features) and the number of votes (outcome).  This relationship can
-be expressed as
+word counts (features) and the number of votes (outcome).  This relationship is
+expressed as
 
 \[
   y = \mathbf{x}^T\mathbf{w}
