--- a/doc/sections/sec05.tex
+++ b/doc/sections/sec05.tex
@@ -19,8 +19,9 @@ We have successfully bested the baseline for the regression using our own
 polynomial regression model implementation, yet barely beat the baseline with
 our $k$-Nearest Neighbor classifier and borrowed random forest model.
 
-Going further, we plan to continue developing and expanding our framework for
-future model evaluation on different data sets.
+Going further, we plan to continue developing and expand our framework for
+future model evaluation on different data sets, as well as explore new machine
+learning models and algorithms.
 
 %%% Local Variables:
 %%% mode: latex
