--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -73,7 +73,7 @@ the performance of regression models.  For classification we define \fmeasure{}
 in the following equation as the harmonic mean of \precision{}
 ($tp / (tp + fp)$) and \recall{} ($tp / (tp + fn)$).
 
-\vspace{-1em}
+\vspace{-.5em}
 \begin{equation}\label{eq:fmeasure}
   \text{\fmeasure} = 2 \cdot \frac{\precision \cdot \recall} {\precision +
     \recall}
